# ifv_ws

./: README.md  command
install/: local_setup.sh  setup.sh
install/ifv_interfaces/include/ifv_interfaces/ifv_interfaces/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h
install/ifv_interfaces/include/ifv_interfaces/ifv_interfaces/msg/detail/: torque8dof__functions.h  torque8dof__rosidl_typesupport_introspection_c.h  torque8dof__traits.hpp  torque8dof__type_support.c
install/ifv_interfaces/local/lib/python3.10/dist-packages/ifv_interfaces/: _ifv_interfaces_s.ep.rosidl_typesupport_c.c
install/ifv_interfaces/local/lib/python3.10/dist-packages/ifv_interfaces-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
install/ifv_interfaces/local/lib/python3.10/dist-packages/ifv_interfaces/msg/: _torque8dof_s.c
install/ifv_interfaces/share/ament_index/resource_index/rosidl_interfaces/: ifv_interfaces
install/ifv_interfaces/share/ifv_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ifv_interfaces/share/ifv_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  export_ifv_interfaces__rosidl_generator_cExport-noconfig.cmake  export_ifv_interfaces__rosidl_generator_cppExport.cmake  export_ifv_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_ifv_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  ifv_interfaces__rosidl_typesupport_cExport-noconfig.cmake  ifv_interfaces__rosidl_typesupport_cExport.cmake  ifv_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  ifv_interfaces__rosidl_typesupport_cppExport.cmake  ifv_interfaces__rosidl_typesupport_introspection_cExport.cmake  ifv_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake
install/ifv_interfaces/share/ifv_interfaces/msg/: Torque8dof.idl
install/ifv_pkg/lib/ifv_pkg/: ifv_listener
install/ifv_pkg/share/ament_index/resource_index/parent_prefix_path/: ifv_pkg
install/ifv_pkg/share/ifv_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ifv_pkg/share/ifv_pkg/cmake/: ifv_pkgConfig.cmake
install/ifv_pkg/share/ifv_pkg/launch/: mylaunch.py
log/: latest_build
src/ft4222_test/: CMakeLists.txt  package.xml
src/ft4222_test/launch/: ft4222launch.py
src/ft4222_test/src/: ft4222_client.cpp  ft4222_node.cpp
src/ifv_interfaces/: CMakeLists.txt  package.xml
src/ifv_interfaces/msg/: Torque12dof.msg  Torque8dof.msg
src/ifv_interfaces/srv/: Spione.srv  Startstop.srv
src/ifv_pkg/: CMakeLists.txt  package.xml
src/ifv_pkg/config/: controller.yaml
src/ifv_pkg/include/ifv_pkg/: gazebo_ros_12doftorque.hpp  gazebo_ros_8doftorque.hpp  main.hpp
src/ifv_pkg/launch/: mylaunch.py
src/ifv_pkg/src/: ft4222_node_copy.cpp  gazebo_ros_12doftorque.cpp  gazebo_ros_8doftorque.cpp  main.cpp  sub_joint.cpp
src/ifv_pkg/src/plugins/: systemgui.cpp
src/ifv_pkg/world/: IFVsim.world  ifv_mesh.world
src/ifv_pkg/world/gazebo11/: ifv_mesh.world
src/ifv_pkg/world/ignition_fortress/: ifv_mesh.sdf
src/ifv_simu/: CMakeLists.txt  package.xml
src/ifv_simu/config/: controller.yaml
src/ifv_simu/include/ifv_simu/: gazebo_ros_joint_torque.hpp  gazebo_ros_joint_torque_private.hpp  main_node.hpp  pdcontroller.hpp
src/ifv_simu/launch/: mock.launch.py
src/ifv_simu/src/: gazebo_ros_joint_torque.cpp  main.cpp  main_node.cpp  pdcontroller.cpp
src/ifv_simu/world/blender/: calf.dae  hip.dae  thigh.dae
src/ifv_simu/world/gazebo11/: IFVsim.world  ifv_mesh.world
src/ifv_simu/world/ignition_fortress/: fuel.sdf
